cdrkit (1.0pre3) UNRELEASED; urgency=low

  * Added FAQ ("where wodim name comes from")
  * Moved the NULL pointer check on cdr_t to a place before it is used for DVD
    feature checks (otherwise it would crash when run on any pure CD-ROM
    reader)
  * Added test for WORDS_BIGENDIAN
  * copied values from align.h to another set of sizeof-reflecting defines in
    xconfig.h
  * workarounds for almost all "you are not allowed to modify that {version
    checking,quality assurance,other-important-looking-wording}" parts,
    replacing the output of "schily" where the commend said that we are forced
    to. One part in cdrecord.c still remains, the comment sounds too dangerous
    to be touched.

  [ Peter Samuelson ]
  * Created cmake test and code snippet for HAVE_C_BITFIELDS

 -- Eduard Bloch <blade@debian.org>  Mon,  4 Sep 2006 09:56:38 +0200

cdrkit (1.0pre2) RELEASED; urgency=low

  * Took zisofs_tools out of the global build system and restored its original
    Makefile. Its own build system works better.

 -- Eduard Bloch <blade@debian.org>  Sun, 03 Sep 2006 22:14:31 +0200

cdrkit (1.0pre1) RELEASED; urgency=low

  [ See http://bugs.debian.org/$BUGNR for detailed explanations ]
  * The Big Fork to an independent project called cdrkit
    + using the last clearly stated GPLed versions of files from
      cdrtools-2.01.01a08 (closes: #353403, 372486)
    + we play the upstream role now, using our patches and we like them
      (closes: #361450)
    + renamed relevant works to avoid claims of "potential defamation" or
      "damage of reputation" (closes: #350738)
    + custom CMake based build system used instead of the original one, since
      we understand it better (closes: #350739 and hopefully closes: #350254,
      reopen if not). It seems to be portable among the platforms
      supported by Debian, it needs a bit of work for porting to non-Linux
      plattforms, though.
  * removed most of the anti-linux2.6  program messages (unless being